kifi-backend/modules/shoebox/angular/src/layout/nav/navLibs.styl
.kf-nav-lib-recos
  border-bottom: 1px solid separatorColor
  padding: 8px 0 8px 0
  font-size: 13px

.kf-nav-lib-system
  border-bottom: 1px solid separatorColor
  padding: 8px 0 8px 0

.kf-nav-lib-item
  padding: 10px 0 0 0
  font-size: 14px
  user-select: none

.kf-nav-lib-info
  display: inline-block

.kf-nav-lib-name
  padding: 0 0 0 9px
  vertical-align: 5px
  font-size: 13px
  font-weight: 400
  color: textDarkColor
  
.kf-nav-lib-text
  padding: 0 0 0 9px
  font-size: 12px
  font-weight: 200
  color: countGreyColor

.kf-nav-lib-bar
  border-bottom: 1px solid separatorColor
  padding: 8px 0 8px 0
  
.kf-lib-input-box
  padding: 14px 0 10px 0

.library-card
  width: 27px
  height: 35px
  display: inline-block
  vertical-align: top
  background-repeat: no-repeat

